# rag-backend

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
src/domain/document/models/: document.py
src/domain/document/repositories/: document_repository.py
src/domain/rag/models/: query.py
src/domain/rag/services/: README.md  rag_strategy.py
src/infrastructure/algorithms/: mock_rag_strategy.py  simple_rag_strategy.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/repositories/: in_memory_document_repository.py
src/presentation/: __init__.py
src/presentation/api/: app.py  dependencies.py
src/presentation/api/routes/: documents.py  rag.py
src/usecase/: __init__.py
src/usecase/document/: __init__.py  document_usecase.py
src/usecase/rag/: __init__.py  rag_query_usecase.py
tests/test_domain/test_document/: test_document_model.py
tests/test_domain/test_rag/: test_query_model.py
tests/test_infrastructure/test_algorithms/: mock_openai_client.py  test_mock_rag_strategy.py
tests/test_infrastructure/test_repositories/: test_in_memory_document_repository.py
tests/test_presentation/test_api/: test_documents.py  test_health.py  test_rag.py
tests/test_usecase/test_document/: __init__.py  test_document_usecase.py
tests/test_usecase/test_rag/: __init__.py  test_rag_query_usecase.py
